@@ -1,3 +1,8 @@
+17 January 2019: Wouter
+	- Fix to remove keys that are too small during
+	  dnssec-trigger-control-setup to avoid openssl failing on the small
+	  keys.  It then generates new (longer) keys.  Patch from Diane Trout.
+
 16 January 2019: Wouter
 	- Fix for #4218: zero string allocation to stop crashes.
 
